# chess-engine

./: CMakeLists.txt  CMakePresets.json  README.md
src/: bitboard.cpp  bitboard.hpp  bitboards.hpp  castling_rights.hpp  evaluate.hpp  main.cpp  move.hpp  move_generation.cpp  move_generation.hpp  move_list.hpp  perft.cpp  position.cpp  position.hpp  search.cpp  search.hpp  transposition_table.cpp  transposition_table.hpp  types.hpp  zobrist_hash.cpp  zobrist_hash.hpp
